--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Count Up By</title>
 </head>
 <body>
   <div>
     <form id="formOne">
       <div class="form-group">
-        <label for="incrementNum">a number</label>
-        <input id="incrementNum" class="form-control" type="text">
+        <label for="input1">a number to increment by:</label>
+        <input id="input1" class="form-control" type="text">
       </div>
       <div class="form-group">
-        <label for="ceilingNum">a number</label>
-        <input id="ceilingNum" class="form-control" type="text">
+        <label for="input2">a number to count to:</label>
+        <input id="input2" class="form-control" type="text">
       </div>
       <button type="submit" class="btn">Show me the story!</button>
     </form>
